cleaned up code up using html checker

--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
 			</section>
 
 			<footer id="contact">
-					<h2>You got this.<br><span>Let's get started!<span></h2>
+					<h2>You got this.<br><span>Let's get started!</span></h2>
 					<p>Tell us all about yourself and how we can help your visions take flight here:</p>
-					<a href="mailto:hello@bitsparrow.dev"><i class="fas fa-envelope" alt="envelpe icon"></i> hello@bitsparrow.dev</a>
+					<a href="mailto:hello@bitsparrow.dev"><i class="fas fa-envelope"></i> hello@bitsparrow.dev</a>
 					<p>You can also learn more about me from the internet :)</p>
-					<a href="https://linkedin.com/in/andlin21/"target="_blank"><i class="fab fa-linkedin-in" alt="linkedin icon"></i></a>
-					<a href="https://github.com/bitsparrow-dev/"target="_blank"><i class="fab fa-github" alt="github icon"></i></a>
+					<a href="https://linkedin.com/in/andlin21/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+					<a href="https://github.com/bitsparrow-dev/" target="_blank"><i class="fab fa-github"></i></a>
 			</footer>
 		</main>
 	</body>
