added website thumbnails to html

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 					<div id="portfolio">
 						<ul class="sites">
 							<li><h2>My Portfolio</h2></li>
-							<li><a href="http://pixljar.com" target="_blank">Illustrations</a></li>
-							<li><a href="https://bitsparrow-dev.github.io/jubileeausten/" target="_blank">JubileeAusten</a></li>
-							<li><a href="https://bitsparrow-dev.github.io/roguepickings/" target="_blank">RoguePickings</a></li>
+							<li><a href="https://bitsparrow-dev.github.io/jubileeausten/" target="_blank"><img src="img/websites-jubileeausten.jpg" alt="Jubilee Austen" /></a></li>
+							<li><a href="https://bitsparrow-dev.github.io/roguepickings/" target="_blank"><img src="img/websites-roguepickings.jpg" alt="Rogue Pickings"/></a></li>
+							<li><a href="https://bitsparrow-dev.github.io/myadvice/" target="_blank"><img src="img/websites-myadvice.jpg" alt="My Advice" /></a></li>
 						</ul>
 					</div>
 				</div>
