changed portfolio html structure and added hover properties to thumbnails

--- a/index.html
+++ b/index.html
@@ -45,14 +45,30 @@
 							<p>I follow mindful practices by creating organized and responsive CSS. My code will be optimized for both desktop computers and mobile devices.</p>
 						</li>
 					</ul>
-					<div id="portfolio">
-						<ul class="sites">
-							<li><h2>My Portfolio</h2></li>
-							<li><a href="https://bitsparrow-dev.github.io/jubileeausten/" target="_blank"><img src="img/websites-jubileeausten.jpg" alt="Jubilee Austen" /></a></li>
-							<li><a href="https://bitsparrow-dev.github.io/roguepickings/" target="_blank"><img src="img/websites-roguepickings.jpg" alt="Rogue Pickings"/></a></li>
-							<li><a href="https://bitsparrow-dev.github.io/myadvice/" target="_blank"><img src="img/websites-myadvice.jpg" alt="My Advice" /></a></li>
-						</ul>
-					</div>
+				</div>
+			</section>
+			<section id="portfolio">
+				<div>
+					<h2>My Portfolio</h2>
+					<ul class="sites">
+						<li>
+							<a href="https://bitsparrow-dev.github.io/jubileeausten/" target="_blank">
+								<img src="img/websites-jubileeausten.jpg" alt="Jubilee Austen" />
+								<div class="overlay"><h3>Jubilee Austen</h3></div>
+							</a>
+						</li>
+						<li>
+							<a href="https://bitsparrow-dev.github.io/roguepickings/" target="_blank">
+								<img src="img/websites-roguepickings.jpg" alt="Rogue Pickings" />
+								<div class="overlay"><h3>Rogue Pickings</h3></div>
+							</a>
+						</li>
+						<li>
+							<a href="https://bitsparrow-dev.github.io/myadvice/" target="_blank"><img src="img/websites-myadvice.jpg" alt="My Advice" />
+								<div class="overlay"><h3>My Advice</h3></div>
+							</a>
+						</li>
+					</ul>
 				</div>
 			</section>
 			<section id="about">
