adjusted section heights in work and portfolio

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						</li>
 						<li>
 							<i class="fab fa-css3"></i>
-							<p>I follow mindful practices by creating organized and responsive CSS. My code will be optimized for both desktop computers and mobile devices.</p>
+							<p>I follow mindful practices by creating organized and responsive CSS. My code are optimized for both desktop computers and mobile devices.</p>
 						</li>
 					</ul>
 				</div>
